fix: fix height on iOS in the section Hero for the page Web Design

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 @layer base {
   :root {
-    --real-browser-height: 100%;
+    --real-browser-height: 100vh;
   }
 
   body {
